figcaption dark mode font fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -597,6 +597,10 @@ footer li img {
     background-color: #444;
     color: #e4e4e4;
   }
+    
+  .figcaption {
+    color: #e4e4e4; 
+    }
 }
 
 /*animated bg test 
